--- a/project-3.ipynb
+++ b/project-3.ipynb
@@ -9,19 +9,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: gensim in c:\\users\\lucia\\anaconda3\\lib\\site-packages (4.3.0)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from gensim) (1.24.4)\n",
-      "Requirement already satisfied: scipy>=1.7.0 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from gensim) (1.10.1)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from gensim) (5.2.1)\n",
-      "Requirement already satisfied: FuzzyTM>=0.4.0 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from gensim) (2.0.9)\n",
-      "Requirement already satisfied: pandas in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from FuzzyTM>=0.4.0->gensim) (1.5.3)\n",
-      "Requirement already satisfied: pyfume in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from FuzzyTM>=0.4.0->gensim) (0.3.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from pandas->FuzzyTM>=0.4.0->gensim) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from pandas->FuzzyTM>=0.4.0->gensim) (2023.3.post1)\n",
-      "Requirement already satisfied: simpful==2.12.0 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from pyfume->FuzzyTM>=0.4.0->gensim) (2.12.0)\n",
-      "Requirement already satisfied: fst-pso==1.8.1 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from pyfume->FuzzyTM>=0.4.0->gensim) (1.8.1)\n",
-      "Requirement already satisfied: miniful in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from fst-pso==1.8.1->pyfume->FuzzyTM>=0.4.0->gensim) (0.0.6)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\lucia\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.1->pandas->FuzzyTM>=0.4.0->gensim) (1.16.0)\n"
+      "Requirement already satisfied: gensim in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (4.3.3)\n",
+      "Requirement already satisfied: numpy<2.0,>=1.18.5 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from gensim) (1.26.4)\n",
+      "Requirement already satisfied: scipy<1.14.0,>=1.7.0 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from gensim) (1.13.1)\n",
+      "Requirement already satisfied: smart-open>=1.8.1 in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from gensim) (7.0.4)\n",
+      "Requirement already satisfied: wrapt in /opt/anaconda3/envs/is310/lib/python3.9/site-packages (from smart-open>=1.8.1->gensim) (1.16.0)\n"
      ]
     }
    ],
@@ -49,15 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('cat', 0.8798075914382935), ('dogs', 0.8344309329986572), ('pet', 0.7449565529823303), ('puppy', 0.7236376404762268), ('horse', 0.7109653949737549), ('animal', 0.6817063689231873), ('pig', 0.655417263507843), ('boy', 0.6545308232307434), ('cats', 0.6471933126449585), ('rabbit', 0.6468629240989685)]\n",
-      "0.8798075\n"
+      "[==================================================] 100.0% 128.1/128.1MB downloaded\n",
+      "[('cat', 0.8798074126243591), ('dogs', 0.8344309329986572), ('pet', 0.7449564337730408), ('puppy', 0.7236376404762268), ('horse', 0.7109653949737549), ('animal', 0.6817063093185425), ('pig', 0.655417263507843), ('boy', 0.6545307636260986), ('cats', 0.6471933126449585), ('rabbit', 0.6468630433082581)]\n",
+      "0.87980753\n"
      ]
     }
    ],
@@ -65,6 +58,7 @@
     "# Load pre-trained Word2Vec model trained on wikipedia data\n",
     "\n",
     "model = gensim.downloader.load(\"glove-wiki-gigaword-100\")\n",
+    "\n",
     "# Getting the vector for a word\n",
     "\n",
     "dog = model['dog']\n",
@@ -75,7 +69,7 @@
     "\n",
     "# Getting the similarity between two words\n",
     "\n",
-    "print(model.similarity('dog', 'cat'))\n"
+    "print(model.similarity('dog', 'cat'))"
    ]
   },
   {
@@ -87,26 +81,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#find the most similar words to a word of your choice. \n",
-    "#Does the result make sense? Look up some of the words if you don't know them\n",
-    "#Share and discuss with your group"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('france', 0.7682002186775208), ('paris', 0.7591814994812012), ('et', 0.7173689007759094), ('est', 0.7076817154884338), ('pour', 0.6992500424385071), ('sur', 0.6955581307411194), ('dans', 0.6915071606636047), ('monde', 0.6913139224052429), ('du', 0.6902377009391785), ('lyon', 0.68704754114151)]\n"
+      "[('lemon', 0.8233426809310913), ('vinegar', 0.7732073068618774), ('lime', 0.7639415860176086), ('sauce', 0.7204378843307495), ('grapefruit', 0.7199090123176575), ('syrup', 0.7161567807197571), ('yogurt', 0.7134124040603638), ('soda', 0.7080042362213135), ('cream', 0.7028740048408508), ('sugar', 0.7018996477127075)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#find the most similar words to a word of your choice. \n",
+    "#Does the result make sense? Look up some of the words if you don't know them\n",
+    "#Share and discuss with your group\n",
+    "\n",
+    "juice = model['juice']\n",
+    "print(model.most_similar('juice'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Part 1a answer: The results make sense as they were all food-related, with most of the results being juice ingredients. Some of the results were other food items unrelated to juice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('paris', 0.8827143311500549), ('france', 0.755802571773529), ('french', 0.7075165510177612), ('prohertrib', 0.6943174600601196), ('berlin', 0.6665561199188232), ('brussels', 0.6574430465698242), ('lyon', 0.6526200771331787), ('london', 0.64079749584198), ('le', 0.6403627991676331), ('strasbourg', 0.6346526145935059)]\n",
+      "[('lowlanders', 0.4844588041305542), ('zebras', 0.45914992690086365), ('dicots', 0.45332765579223633), ('non-arabs', 0.45208773016929626), ('amerindians', 0.4478238821029663), ('buffalos', 0.4475123882293701), ('giraffes', 0.4466330111026764), ('bavarians', 0.4452260732650757), ('welshmen', 0.4440663158893585), ('dingos', 0.44403281807899475)]\n",
+      "[('dogs', 0.8921768665313721), ('cats', 0.8814380764961243), ('dog', 0.7873795628547668), ('animals', 0.7512702345848083), ('pets', 0.7392118573188782), ('cows', 0.6835324168205261), ('pet', 0.679297685623169), ('horses', 0.6774964332580566), ('pigs', 0.6755765080451965), ('animal', 0.6683686971664429)]\n"
      ]
     }
    ],
@@ -118,6 +132,7 @@
     "fra_capital=model[\"france\"]+capital\n",
     "\n",
     "print(model.most_similar(fra_capital))\n",
+    "\n",
     "#likewise, we can extract a \"plural vector\" by subtracting the vector for a singular noun from the vector for its plural\n",
     "plural=model[\"cats\"]-model[\"cat\"]\n",
     "\n",
@@ -126,39 +141,38 @@
     "#we can also add vectors together\n",
     "plural_dogs=model[\"dog\"]+plural\n",
     "\n",
-    "print(model.most_similar(plural_dogs))\n",
-    "\n"
+    "print(model.most_similar(plural_dogs))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('menstruating', 0.6102038621902466), ('miscarry', 0.5550355911254883), ('lactating', 0.5421728491783142), ('pre-eclampsia', 0.5129693150520325), ('uterus', 0.5093088746070862), ('ovulating', 0.5070309042930603), ('miscarried', 0.5043483972549438), ('adoptee', 0.5012543201446533), ('comnena', 0.5012539625167847), ('pulecio', 0.500389039516449)]\n",
-      "[('arsene', 0.4388486444950104), ('ancelotti', 0.4215138852596283), ('nistelrooy', 0.41140034794807434), ('strachan', 0.4089668393135071), ('rafa', 0.4072844088077545), ('technicals', 0.40608730912208557), ('allardyce', 0.4018688499927521), ('boss', 0.4010736346244812), ('rangers', 0.39962294697761536), ('utd', 0.3967454135417938)]\n"
+      "[('menstruating', 0.6102039813995361), ('miscarry', 0.5550354719161987), ('lactating', 0.542172908782959), ('pre-eclampsia', 0.5129693746566772), ('uterus', 0.5093088746070862), ('ovulating', 0.5070309042930603), ('miscarried', 0.5043483376502991), ('adoptee', 0.5012543201446533), ('comnena', 0.5012539625167847), ('pulecio', 0.500389039516449)]\n",
+      "[('arsene', 0.4388486444950104), ('ancelotti', 0.42151397466659546), ('nistelrooy', 0.41140034794807434), ('strachan', 0.4089668393135071), ('rafa', 0.40728434920310974), ('technicals', 0.4060872495174408), ('allardyce', 0.4018688201904297), ('boss', 0.40107354521751404), ('rangers', 0.39962300658226013), ('utd', 0.3967454135417938)]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[('doctor', 0.8661208152770996),\n",
-       " ('nurse', 0.7757078409194946),\n",
-       " ('physician', 0.7128060460090637),\n",
+       "[('doctor', 0.8661209940910339),\n",
+       " ('nurse', 0.7757077813148499),\n",
+       " ('physician', 0.7128061652183533),\n",
        " ('woman', 0.7089030742645264),\n",
-       " ('doctors', 0.6793615818023682),\n",
+       " ('doctors', 0.6793617010116577),\n",
        " ('pregnant', 0.6787967085838318),\n",
-       " ('patient', 0.6772217750549316),\n",
-       " ('dentist', 0.669424295425415),\n",
-       " ('mother', 0.6586816310882568),\n",
+       " ('patient', 0.6772218346595764),\n",
+       " ('dentist', 0.6694242358207703),\n",
+       " ('mother', 0.6586815714836121),\n",
        " ('medical', 0.6466937065124512)]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,8 +187,7 @@
     "print(model.most_similar(gender))\n",
     "print(model.most_similar(-gender))\n",
     "\n",
-    "model.most_similar(model[\"doctor\"]+gender)\n",
-    "\n"
+    "model.most_similar(model[\"doctor\"]+gender)"
    ]
   },
   {
@@ -186,13 +199,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('black', 0.48912182450294495), ('coloured', 0.4793228805065155), ('clad', 0.473660409450531), ('stained', 0.46707868576049805), ('maroon', 0.4585193991661072), ('purple', 0.450435608625412), ('colored', 0.44752559065818787), ('bearded', 0.4471698999404907), ('silvery', 0.42704635858535767), ('berets', 0.4262385368347168)]\n",
+      "[('race', 0.5634858012199402), ('hockenheim', 0.5490911602973938), ('indycar', 0.541210949420929), ('monza', 0.5338013768196106), ('nürburgring', 0.5271561741828918), ('suzuka', 0.5216007828712463), ('races', 0.5000783205032349), ('nurburgring', 0.4993460774421692), ('irl', 0.49865472316741943), ('prix', 0.49588844180107117)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('business', 0.6699997186660767),\n",
+       " ('black', 0.6332972645759583),\n",
+       " ('corporate', 0.6016422510147095),\n",
+       " ('businesses', 0.6013487577438354),\n",
+       " ('small', 0.5787851810455322),\n",
+       " ('industry', 0.5728737711906433),\n",
+       " ('companies', 0.5677958726882935),\n",
+       " ('large', 0.5675168037414551),\n",
+       " ('private', 0.5619243383407593),\n",
+       " ('clients', 0.5476332902908325)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#try to isolate a specific dimension in the embeddings and add it to multiple words. \n",
     "#does this show any bias or assumptions in the data? \n",
-    "# Discuss with your group and share most interesting dimension in the document"
+    "# Discuss with your group and share most interesting dimension in the document\n",
+    "\n",
+    "race=model[\"black\"]-model[\"race\"]\n",
+    "\n",
+    "print(model.most_similar(race))\n",
+    "print(model.most_similar(-race))\n",
+    "\n",
+    "model.most_similar(model[\"business\"]+race)"
    ]
   },
   {
@@ -599,7 +647,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "is310",
    "language": "python",
    "name": "python3"
   },
@@ -613,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
